--- a/history.html
+++ b/history.html
@@ -154,6 +154,7 @@
       </div>
     </div>
   </div>
+  <div class="container5">
   <footer class="footer">
     <br>
     <div class="row">
@@ -178,6 +179,7 @@
                 ✉rocket-koishikawa@gmail.com
               </span>
   </footer>
+  </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
