--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <span class="clicktxt"><i class="fas fa-angle-down"></i>モデルロケットとは</span>
                   </label>
                   <input type="checkbox" id="l-1"><div class="dsp">
-                  <div class="intro">モデルロケットは本格的な火薬を燃やして得られる推力で打ち上げ、およそ90~200m程度上空まで飛ばすことができます。<br>JAXAやNASAなどの宇宙に飛ばすロケットとは、使う燃料に違いがありますが、それ以外の機体の設計、製作技術については本物のロケットと似通うところが多くあり、本格的な航空宇宙の教材として世界ではかなり有名です。<br><div class="centerimg"><img src="image/modelrockettatiiti.jpg" alt="モデルロケットの立ち位置" width="95%"><br>《写真》モデルロケットの立ち位置</div><br>日本でも近年、人気が高まってきており、2024年10月の全国大会では、200名以上が参加しました（日本モデルロケット協会調べ）<br> >詳しくは<a href="https://jar.or.jp/" style="color:deepskyblue">こちら</a>（モデルロケット協会のページ）</div>
+                  <div class="intro">モデルロケットは火薬を燃焼させて推力を得ることで打ち上げられ、およそ90～250m程度の高度まで達します。その仕組みはJAXAやNASAなどが運用する宇宙に到達する固体燃料ロケットと共通点が多く、機体の設計や製作技術においても実際のロケットと類似する部分があります。そのため、モデルロケットは本格的な航空宇宙の教材として世界的に広く知られています。<br><div class="centerimg"><img src="image/modelrockettatiiti.jpg" alt="モデルロケットの立ち位置" width="95%"><br>《写真》モデルロケットの立ち位置</div><br>日本でも近年、人気が高まってきており、2024年10月の全国大会では、200名以上が参加しました（日本モデルロケット協会調べ）<br> >詳しくは<a href="https://jar.or.jp/" style="color:deepskyblue">こちら</a>（モデルロケット協会のページ）</div>
                   </div>
                 </div>
                 <div class="switchdsp">
