--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col-md-12">
               <h2>全国大会 <br class="br-sp">ロケット甲子園 <br class="br-sp">２冠達成</h2>
               <br>
-              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な火薬を用いて90~200m程度上空に飛翔する<strong>「モデルロケット」</strong>の設計、開発を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会（第45回モデルロケット全国大会）で<strong>総合優勝</strong>、大型（65cm～1m）機体の全国大会（ロケット甲子園2024）にて<strong>優勝</strong>、日本代表として<strong>世界大会（IRC、パリ大会）に出場</strong>し、パリ航空ショーに参加、パリの空に僕たちのロケットを打ち上げてきます。<br>その他にも、モデルロケットの活動を地域の方々、小学生、後輩等に広める活動にも積極的に参加し、モデルロケットの良さを広め、挑戦してみるとっかかりを作る活動もしています。</div>
+              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な火薬を用いて90~200m程度上空に飛翔する<strong>「モデルロケット」</strong>の設計、開発を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会（第45回モデルロケット全国大会）で<strong>総合優勝</strong>、大型（65cm～1m）機体の全国大会（ロケット甲子園2024）にて<strong>優勝</strong>、日本代表として<strong>世界大会（IRC、パリ大会）に出場</strong>し、パリ航空ショーに参加、パリの空に僕たちのロケットを打ち上げてきます。<br>その他にも、モデルロケットの活動を地域の方々、小学生、後輩等に広める活動にも積極的に参加し、モデルロケットの良さを広め、挑戦してみるとりかかりを作る活動もしています。</div>
             </div>
             <div class="col-md-7">
               <h2>小石川ロケット班<br class="br-sp">について知る</h2>
