--- a/aboutus.html
+++ b/aboutus.html
@@ -109,7 +109,7 @@
                           <div class="intro4">ロケットのフレームとなるボディーは、機体の大部分を占めるため、軽量かつ強度が必要です。</div><br>
                           <strong>ボディの作り方</strong><br>
                           <div class="intro4">①FRPの型に離型剤を塗ります<br>
-                            ②ガラス繊維という専用の強化繊維にエ樹脂を塗り、型に巻きつけます<br>
+                            ②ガラス繊維にエポキシ樹脂を塗り、型に巻きつけます<br>
                             ③硬化するまで一日ほど待って、完全に硬化したら型から取り外して完成です
                           </div>
                           <strong>苦労したところ</strong><br>
