--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <meta property="og:description" content="小石川ロケット班は、都立小石川中等教育学校でモデルロケットの設計、製作、打ち上げを行っています。">
     <meta property="og:locale" content="ja_JP">
     <meta property="og:site_name" content="小石川ロケット班">
+    <meta name="twitter:image" content="https://rocketkss.github.io/image/ogp.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="小石川ロケット班">
+    <meta name="twitter:description" content="小石川ロケット班は、都立小石川中等教育学校でモデルロケットの設計、製作、打ち上げを行っています。">
 </head>
 <body>
     <header class="header">
