--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
               　<div class="col-12">
                   <br><h2>連絡先</h2><br>
                   <div class="intro2"><a href="mailto:rocket.koishikawa@gmail.com"><i class="fa fa-envelope fa-bg" aria-hidden="true"></i> rocket.koishikawa@gmail.com</a></div><br>
-                  <div class="intro2"><a href="https://x.com/rocket_kss"><i class="fa-brands fa-x-twitter fa-bg"></i> RocketX</a></div><br>
+                  <div class="intro2"><a href="https://x.com/rocket_kss"><i class="fa-brands fa-x-twitter fa-bg"></i> 小石川ロケット班</a></div><br>
                   <div class="intro2"><a href="https://www.instagram.com/rocket_kss/"><i class="fa-brands fa-instagram fa-bg"></i> rocket_kss</a></div><br>
                 </div>
             </div>
