--- a/aboutus.html
+++ b/aboutus.html
@@ -240,7 +240,7 @@
                     </span>
                     <br>
                     <span class="copyright">
-                      ✉rocket-koishikawa@gmail.com
+                      ✉rocket.koishikawa@gmail.com
                     </span>
                   </div>
               </footer>
