--- a/history.html
+++ b/history.html
@@ -177,7 +177,7 @@
     </span>
     <br>
               <span class="copyright">
-                ✉rocket-koishikawa@gmail.com
+                ✉rocket.koishikawa@gmail.com
               </span>
   </footer>
   </div>
