--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </span>
             <br>
               <span class="copyright">
-                ✉rocket-koishikawa@gmail.com
+                ✉rocket.koishikawa@gmail.com
               </span>
           </footer>
         </div>
