--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="container"><br>
           <div class="sponser"><br>
             <h2>スポンサー</h2><br>
-            以下の企業・個人の方々が応援してくださっています。<hr><br><br>404 Not found<br> 
+            スポンサー募集についてはこちらのPDFをご確認ください<hr><a href="image/sponser.pdf" class="support">PDFを見る</a><br><br><br> 
           </div>
         </div>
         <div class="container">
