--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="container"><br>
           <div class="sponser"><br>
             <h2>スポンサー</h2><br>
-            スポンサー募集についてはこちらのPDFをご確認ください<hr><a href="image/sponser.pdf" class="support">PDFを見る</a><br><br><br> 
+            スポンサー募集についてはこちらのPDFをご確認ください<hr><a href="image/sponser.pdf" class="support">PDF</a><br><br><br> 
           </div>
         </div>
         <div class="container">
