--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
         <div class="container"><br>
           <div class="sponser"><br>
             <h2>スポンサー</h2><br>
+            パリ大会に出場するにあたって、ロケット製作費、試験飛行のエンジン費用、渡航費等含め、合計1000万円程が必要になります。<br>
+            世界一をとるため、皆様のあたたかい支援をお待ちしております！<br>
             スポンサー募集についてはこちらのPDFをご確認ください<hr><a href="image/sponser.pdf" class="support">PDF</a><br><br><br> 
           </div>
         </div>
