--- a/blog.html
+++ b/blog.html
@@ -57,6 +57,14 @@
                 </div>
               </div>
               <div class="col-md-6">
+                  <div class="ribbon12-wrapper">
+                    <h3 class="ribbon12">ロケットの設計ソフト「OpenRocket」</h3>
+                      <div class="continue">2025/2/18</div>
+                      モデルロケットを作るにあたって、最初に行うべきことはロケット
+                     ...
+                     <div class="samuneiru"><img src="blog/b-img/1.png" class="img-fluid" width="90%" alt="顔が映っているため使用不可"></div>
+                     <div class="continue">続きは<a href="blog/202504131.html" style="color:deepskyblue">こちら</a></div>
+                </div>
               </div>
             </div>
         </div>
