TOPクラファン掲載

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <div class="title">
           <h1>ロケット甲子園優勝</h1>
           <p>高校生がモデルロケットで世界に挑む！</p>
+          <a href="https://ubgoe.com/projects/916" class="support" target="_blank">クラファンはこちら</a>
         </div>        
         <div class="container">
           <div class="row">
@@ -117,7 +118,13 @@
             <h2>スポンサー</h2><br>
             パリ大会に出場するにあたって、ロケット製作費、試験飛行のエンジン費用、渡航費等含め、合計1000万円程が必要になります。<br>
             世界一をとるため、皆様のあたたかい支援をお待ちしております！<br>
-            スポンサー募集についてはこちらのPDFをご確認ください<hr><a href="image/sponser.pdf" class="support">PDF</a><br><br><br> 
+            現在クラウドファンディングを実施しておりますので、ご支援・応援よろしくお願いします。
+            
+            <a href="https://ubgoe.com/projects/916" class="support" target="_blank">クラファンはこちら</a>
+            <br>
+            <br>
+            企業スポンサーの募集についてはこちらのPDFをご確認ください<br><a href="image/sponser.pdf" class="support">PDF</a><br><br><br> 
+            
           </div>
         </div>
         <div class="container">
