--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h1>ロケット甲子園優勝</h1>
           <p>高校生がモデルロケットで世界に挑む！</p>
           <br>
-          <a href="https://ubgoe.com/projects/916" class="support" target="_blank">クラファンはこちら</a>
+          <a href="https://ubgoe.com/projects/916" class="support" target="_blank">クラファンは<br class="br-sp">こちら</a>
         </div>        
         <div class="container">
           <div class="row">
@@ -114,6 +114,7 @@
             </div>
           </div>
         </div>
+        
         <div class="container"><br>
           <div class="sponser"><br>
             <h2>スポンサー</h2><br>
@@ -121,7 +122,7 @@
             世界一をとるため、皆様のあたたかい支援をお待ちしております！<br>
             現在クラウドファンディングを実施しておりますので、ご支援・応援よろしくお願いします。
             
-            <a href="https://ubgoe.com/projects/916" class="support" target="_blank">クラファンはこちら</a>
+            <a href="https://ubgoe.com/projects/916" class="support">クラファンはこちら</a>
             <br>
             <br>
             企業スポンサーの募集についてはこちらのPDFをご確認ください<br><a href="image/sponser.pdf" class="support">PDF</a><br><br><br> 
