--- a/index.html
+++ b/index.html
@@ -114,10 +114,15 @@
             </div>
           </div>
         </div>
-        
+        <div class="container"><br>
+            <div class="h2s">特別スポンサー</div>
+            <img class="siyuu" src="image/siyuu.png">
+            <div class="h2s">スポンサー一覧</div><br>
+            <img src="image/sponser.png" alt="スポンサー" width="100%">
+        </div>
         <div class="container"><br>
           <div class="sponser"><br>
-            <h2>スポンサー</h2><br>
+            <h2>スポンサー募集</h2><br>
             パリ大会に出場するにあたって、ロケット製作費、試験飛行のエンジン費用、渡航費等含め、合計1000万円程が必要になります。<br>
             世界一をとるため、皆様のあたたかい支援をお待ちしております！<br>
             現在クラウドファンディングを実施しておりますので、ご支援・応援よろしくお願いします。
