--- a/index2.html/index.html
+++ b/index2.html/index.html
@@ -115,12 +115,12 @@
           </div>
         </div>
         <div class="container"><br>
+            <div class="h2s">IRC日本代表公式スポンサー</div>
+            <img src="image/ihinabtesco2.png" alt="IHI,Nabtesco" width="100%">
+            <div class="h2s">パートナー企業</div><br>
+            <img src="image/sponser.png" alt="スポンサー" width="100%">
             <div class="h2s">特別スポンサー</div>
             <img class="siyuu" alt="紫友同窓会" src="image/siyuu.png">
-            <div class="h2s">スポンサー一覧</div><br>
-            <img src="image/sponser.png" alt="スポンサー" width="100%">
-            <div class="h2s">IRC公式スポンサー</div>
-            <img src="image/ihinabtesco.png" alt="IHI,Nabtesco" width="100%">
         </div>
         <div class="container"><br>
           <div class="sponser"><br>
