--- a/index2.html/index2.html
+++ b/index2.html/index2.html
@@ -41,12 +41,12 @@
     <header class="header">
         <nav>
           <div class="logo">
-            <a href="index.html">小石川ロケット班</a>
+            <a href="index2.html">小石川ロケット班</a>
           </div>
           <input type="checkbox" id="menu-toggle">
           <label for="menu-toggle" class="menu-icon">&#9776;</label>
           <ul class="menu">
-            <li><a href="index.html">トップ</a></li>
+            <li><a href="index2.html">トップ</a></li>
             <li><a href="aboutus.html">私たちについて</a></li>
             <li><a href="history.html">歴史</a></li>
             <li><a href="blog.html">ブログ</a></li>
@@ -115,12 +115,10 @@
           </div>
         </div>
         <div class="container"><br>
-            <div class="h2s">IRC日本代表公式スポンサー</div>
-            <img src="image/ihinabtesco2.png" alt="IHI,Nabtesco" width="100%">
-            <div class="h2s">パートナー企業</div><br>
-            <img src="image/sponser.png" alt="スポンサー" width="100%">
             <div class="h2s">特別スポンサー</div>
             <img class="siyuu" alt="紫友同窓会" src="image/siyuu.png">
+            <div class="h2s">スポンサー一覧</div><br>
+            <img src="image/sponser.png" alt="スポンサー" width="100%">
         </div>
         <div class="container"><br>
           <div class="sponser"><br>
