--- a/blog.html
+++ b/blog.html
@@ -47,13 +47,13 @@
         <div class="container">
             <div class="row">
               <div class="col-md-6">
-                <div class="ribbon12-wrapper">
-                    <h3 class="ribbon12">モデルロケット甲子園優勝！</h3>
-                      <div class="continue">2025/2/18</div>
-                      モデルロケット甲子園とは？　モデルロケット甲子園とは中高生の
+                  <div class="ribbon12-wrapper">
+                    <h3 class="ribbon12">世界大会に向けてロケット打ち上げを行いました！ in 長野</h3>
+                      <div class="continue">2025/6/3</div>
+                      6月1日(日)に、私たち物理研究会ロケット班は、長野県千曲市
                      ...
-                     <div class="samuneiru"><img src="image/kaushi-yuusyou.jpg" class="img-fluid" width="90%" alt="顔が映っているため使用不可"></div>
-                     <div class="continue">続きは<a href="blog/202502181.html" style="color:deepskyblue">こちら</a></div>
+                     <div class="samuneiru"><img src="blog/b-img/1.jpg" class="img-fluid" width="90%" alt="顔が映っているため使用不可"></div>
+                     <div class="continue">続きは<a href="blog/202506021.html" style="color:deepskyblue">こちら</a></div>
                 </div>
               </div>
               <div class="col-md-6">
@@ -66,6 +66,17 @@
                      <div class="continue">続きは<a href="blog/202504131.html" style="color:deepskyblue">こちら</a></div>
                 </div>
               </div>
+              <div class="col-md-6">
+                <div class="ribbon12-wrapper">
+                    <h3 class="ribbon12">モデルロケット甲子園優勝！</h3>
+                      <div class="continue">2025/2/18</div>
+                      モデルロケット甲子園とは？　モデルロケット甲子園とは中高生の
+                     ...
+                     <div class="samuneiru"><img src="image/kaushi-yuusyou.jpg" class="img-fluid" width="90%" alt="顔が映っているため使用不可"></div>
+                     <div class="continue">続きは<a href="blog/202502181.html" style="color:deepskyblue">こちら</a></div>
+                </div>
+              </div>
+              
             </div>
         </div>
         <div class="container">
