--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
             <br><h1>ブログ</h1>
             <p>ロケット班の活動報告です</p>
         </div>
-        <div class="container">
+        <div class="container-blog">
             <div class="row">
               <div class="col-md-6">
                   <div class="ribbon12-wrapper">
@@ -79,7 +79,7 @@
               
             </div>
         </div>
-        <div class="container">
+        <div class="container-blog">
           <footer class="footer">
             <br>
             <div class="row">
